<resources>
    <!-- ventana_componente_loquehace  Ej: tv_login_faltandatos -->
    <string name="app_name">Commons</string>
    <string name="tv_login_tit">Log In</string>
    <string name="hint_login_usuario">Email</string>
    <string name="hint_login_password">Contraseña</string>
    <string name="btn_login_acceder">Log In</string>
    <string name="tv_login_signup">Sign Up</string>
    <string name="tv_signup_titulo">Sign up</string>
    <string name="tv_signup_nombre">Nombre</string>
    <string name="tv_signup_barrio">Barrio</string>
    <string name="tv_signup_email">Email</string>
    <string name="tv_signup_login">Log in</string>
    <string name="et_signup_nombre">Introduce el nombre</string>
    <string name="et_signup_barrio">Introduce el barrio</string>
    <string name="et_signup_email">Introduce el email</string>
    <string name="et_signup_contraseña">Contraseña</string>
    <string name="pass">Contraseña</string>
    <string name="btn_signup_signup">SIGN UP</string>
    <string name="debe_introducir">Debe introducir en los campos requeridos</string>
    <string name="main_home">Inicio</string>
    <string name="main_community">Vecinos</string>
    <string name="main_profile">Perfil</string>
    <string name="no_fragment">"No se ha encontrado el fragment: "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tv_fragment_nombre">Julia Ramírez</string>
    <string name="tv_fragment_ubicacion">Chamartin, Madrid</string>
    <string name="tv_fragment_desc">Descripción:</string>
    <string name="tv_fragment_descripcion">Soy joven, inexperta y no conozco a mucha gente. Si eres de la zona me vendría bien un poco de ayuda.</string>
    <string name="btn_fragment_editar">EDITAR</string>
    <string name="btn_fragment_ajustes">AJUSTES</string>
    <string name="btn_fragment_vecinos_busqueda">Buscar</string>
    <string name="btn_fragment_vecinos_filtros">Filtros</string>
    <string name="hint_busqueda">Introduce el nombre del vecino</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_fragment_editar_perfil">Editar Perfil</string>
    <string name="title_activity_ajustes_drawer">AjustesDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tv_editarperfil_correo">Correo</string>
    <string name="tv_editarperfil_descripcion">Descripción</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_fragment_vecinos_email">Contactar</string>
    <string name="perfil_modificado_ok">Tu perfil ha sido modificado con éxito.</string>
    <string name="anuncio_creado_err">No se ha podido publicar el anuncio.</string>
    <string name="anuncio_creado_ok">Se ha publicado el anuncio correctamente.</string>
    <string name="selecciona_imagen">Selecciona una imagen</string>
    <string name="hint_signup_usuario">Nombre</string>
    <string name="chip_1">1km</string>
    <string name="chip_3">3km</string>
    <string name="chip_5">5km</string>
    <string name="chip_10">10km</string>
</resources>