<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PerfilFragment"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginBottom="60dp">




        <ImageView
            android:id="@+id/im_fragment_perfil"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
             />

        <TextView
            android:id="@+id/tvFragmentNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_fragment_nombre"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/tvFragmentUbica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tv_fragment_ubicacion"/>

        <TextView
            android:id="@+id/tvFragmentDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_fragment_desc"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tvFragmentDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/tv_fragment_descripcion"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="130dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFragmentEditar"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/btn_fragment_editar"
            style="@style/ButtonOrange"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFragmentAjustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_fragment_ajustes"
            style="@style/ButtonGreen"/>

    </LinearLayout>

</LinearLayout>