<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.asd">

    <TextView
        android:id="@+id/tvSignUpTitulo"
        android:layout_width="149dp"
        android:layout_height="56dp"
        android:text="@string/tv_signup_titulo"
        android:textColor="@color/colorBackground"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        />

    <TextView
        android:id="@+id/tvSignUpNombre"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/tv_signup_nombre"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/tvSignUpBarrio"
        android:layout_width="103dp"
        android:layout_height="23dp"
        android:text="@string/tv_signup_barrio"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/tvSignUpEmail"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:text="@string/tv_signup_email"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <TextView
        android:id="@+id/tvSignUpLogIn"
        android:layout_width="149dp"
        android:layout_height="59dp"
        android:layout_marginBottom="68dp"
        android:text="@string/tv_signup_login"
        android:textColor="@color/colorBackground"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignUpSignUp"
        android:layout_width="187dp"
        android:layout_height="57dp"
        android:layout_marginBottom="55dp"

        android:background="@color/colorAccent"
        android:onClick="SignUp"
        style="@style/ButtonOrange"
        android:text="@string/btn_signup_signup"
        android:textColorHint="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="@+id/tvSignUpLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etsignupcontrasenia"
        app:layout_constraintVertical_bias="0.8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etsignupnombre"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:textColorHint="@color/colorBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSignUpNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="297dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:hint="@string/et_signup_nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etsignupbarrio"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:textColorHint="@color/colorBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSignUpBarrio">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="297dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:hint="@string/et_signup_barrio" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etsignupemail"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:textColorHint="@color/colorBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSignUpEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="297dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:hint="@string/et_signup_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etsignupcontrasenia"
        android:layout_width="289dp"
        android:layout_height="61dp"
        android:layout_marginStart="92dp"
        android:background="@color/colorPrimary"
        android:textColorHint="@color/colorBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etsignupemail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorBackground">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="297dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:hint="@string/et_signup_contraseña" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>