<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scrim_gradient"
    android:padding="16dp"
    tools:context=".LogIn">

    <TextView
        android:id="@+id/tvLoginTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="120dp"
        android:text="@string/tv_login_tit"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/colorBackground"
        android:fontFamily="@font/montserrat"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lLoginUsuario"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="-8dp"
            android:background="@color/colorTransparent"
            android:hint="@string/hint_login_usuario"
            android:textColor="@color/colorBackground"
            android:fontFamily="@font/montserrat"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lLoginPassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/lLoginUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:hint="@string/hint_login_password"
            android:layout_marginStart="-8dp"
            android:inputType="textPassword"
            android:textColor="@color/colorBackground"
            android:fontFamily="@font/montserrat"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginAcceder"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/lLoginPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/btn_login_acceder"
        android:textSize="22sp"
        style="@style/ButtonOrange"
        android:onClick="acceder"/>


    <TextView
        android:id="@+id/tvLoginSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnLoginAcceder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:text="@string/tv_login_signup"
        android:textSize="20sp"
        android:textColor="@color/colorBackground"
        android:fontFamily="@font/montserrat"
        android:onClick="abrirSignup"/>



</androidx.constraintlayout.widget.ConstraintLayout>