<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.EditarPerfilFragment"
    android:layout_marginBottom="116dp"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.EditarPerfilFragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/im_fragment_editar_perfil"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                />
            <ImageButton
                android:id="@+id/imbEditarImagenPerfil"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginLeft="-180dp"
                android:src="@drawable/ic_edit_160"
                android:background="@color/colorTransparentWhite"/>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll1EditPerfFrag"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEditPerfFragTitNom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:layout_weight="1"
            android:text="@string/tv_signup_nombre"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lEditPerfFragNom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6"
            style="@style/myInputTextMain">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditPerfFragNom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-8dp"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2EditPerfFrag"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEditPerfFragTitBarrio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:layout_weight="1"
            android:text="@string/tv_signup_barrio"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lEditPerfFragBarrio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            style="@style/myInputTextMain">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditPerfFragBarrio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-8dp"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3EditPerfFrag"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEditPerfFragTitCorreo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:layout_weight="1"
            android:text="@string/tv_editarperfil_correo"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lEditPerfFragCorreo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            style="@style/myInputTextMain">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditPerfFragCorreo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-8dp"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4EditPerfFrag"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEditPerfFragTitPW"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:layout_weight="1"
            android:text="@string/et_signup_contraseña"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lEditPerfFragPW"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6"
            app:passwordToggleEnabled="true"
            style="@style/myInputTextMain">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditPerfFragPW"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="-8dp"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"

                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll5EditPerfFrag"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEditPerfFragTitDescrip"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="26dp"
            android:layout_weight="1"
            android:text="@string/tv_editarperfil_descripcion"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lEditPerfFragDescrip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="-16dp"
            style="@style/myInputTextMain">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditPerfFragDescrip"
                android:layout_width="340dp"
                android:layout_height="match_parent"
                android:layout_marginStart="-8dp"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditPerfFragGuardar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/btn_guardar"
        android:textSize="22sp"
        style="@style/ButtonOrange"/>


</LinearLayout>


</ScrollView>